# Meow

./: .cvsignore  CMakeLists.txt  ChangeLog  DEPENDENCIES  README  addtorepo.sh  buildall.sh  configdevices.cpp  configdevices.h  configdialog.cpp  configdialog.h  directoryadder.cpp  directoryadder.h  fileproperties.cpp  fileproperties.h  filter.cpp  filter.h  icons.qrc  kittenplayer.desktop  kittenplayerui.rc  main.cpp  mainwindow-qt.cpp  mainwindow-qt.h  mainwindow.cpp  mainwindow.h  mainwindow_common.cpp  md5.c  md5.h  meow-qt.desktop  meow.desktop  meowres.rc  meowui.rc  player.cpp  player.h  player_p.h  scrobble.cpp  scrobble.h  shortcut.cpp  shortcut.h  tooltip.cpp  (+3 more)
akode/: Makefile.am  Makefile.in  akode_export.h  akodelib.h  audioconfiguration.h  audioframe.h  auto_sink.cpp  auto_sink.h  buffered_decoder.cpp  buffered_decoder.h  decoder.h  decoderpluginhandler.cpp  fast_resampler.cpp  fast_resampler.h  file.h  localfile.cpp  localfile.h  magic.cpp  mmapfile.cpp  mmapfile.h  player.cpp  player.h  plugin.cpp  plugin.h  pluginhandler.cpp  pluginhandler.h  resampler.h  sink.h  void_sink.cpp  void_sink.h  wav_decoder.cpp  wav_decoder.h
akode/plugins/: alsa_sink.cpp  alsa_sink.h  dsound_sink.cpp  dsound_sink.h  flac113_decoder.cpp  flac113_decoder.h  mpc_decoder.cpp  mpc_decoder.h  mpeg_decoder.cpp  mpeg_decoder.h  mpg123_decoder.cpp  mpg123_decoder.h  opus_decoder.cpp  opus_decoder.h  speex_decoder.cpp  speex_decoder.h  vorbis_decoder.cpp  vorbis_decoder.h
akode/plugins/mppdec/: Makefile.in
db/: base.cpp  base.h  collection.cpp  collection.h  file.cpp  file.h  model.cpp  model.h  sqlt.h
releasetools/: Toolchain-mingw32.cmake  build-platform.sh  release-tools.sh  run
